--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bigwhite">
     <uses-sdk android:minSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE">
+
+    </uses-permission>
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -18,7 +22,10 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-
+        </activity>
+        <activity
+            android:name=".FileManagerActivity"
+            android:theme="@android:style/Theme.Dialog">
         </activity>
     </application>
 
