--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion '23.0.1'
+
+    sourceSets.main {
+        jniLibs.srcDir 'libs'
+        jni.srcDirs = [] //disable automatic ndk-build call
+    }
+
     defaultConfig {
         applicationId "com.bigwhite"
         minSdkVersion 21
@@ -18,10 +24,20 @@ android {
     }
     productFlavors {
     }
+    packagingOptions{
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    //compile 'com.android.support:appcompat-v7:23.1.1'
+    compile files('libs/engine.io-client-0.4.1.jar')
+    compile files('libs/Java-WebSocket-1.3.0.jar')
+    compile files('libs/socket.io-client-0.4.2.jar')
+    compile files('libs/libjingle_peerconnection.jar')
+    compile files('libs/poi-scratchpad-3.14-beta1-20151223.jar')
+    compile files('libs/poi-3.14-beta1-20151223.jar')
 }
